--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <main>
 	<div id="banner">
 		<img class="banner-img" src="./assets/images/slideshow/slide1.jpg" alt="Banner Print-it">
-		<p>Impressions tous formats <span>en boutique et en ligne</span></p>
+		<p id="tagLine">Impressions tous formats <span>en boutique et en ligne</span></p>
         <img id="arrow_left" class="arrow arrow_left" src="assets/images/arrow_left.png" alt="fleche gauche">
         <img id="arrow_right" class="arrow arrow_right" src="assets/images/arrow_right.png" alt="fleche droite">
 		<div class="dots">
